docs/apache-airflow/2.2.4/_sources/_api/airflow/models/renderedtifields/index.rst.txt
:py:mod:`airflow.models.renderedtifields`
=========================================

.. py:module:: airflow.models.renderedtifields

.. autoapi-nested-parse::

   Save Rendered Template Fields



Module Contents
---------------

Classes
~~~~~~~

.. autoapisummary::

   airflow.models.renderedtifields.RenderedTaskInstanceFields




.. py:class:: RenderedTaskInstanceFields(ti: airflow.models.taskinstance.TaskInstance, render_templates=True)

   Bases: :py:obj:`airflow.models.base.Base`

   Save Rendered Template Fields

   .. py:attribute:: __tablename__
      :annotation: = rendered_task_instance_fields

      

   .. py:attribute:: dag_id
      

      

   .. py:attribute:: task_id
      

      

   .. py:attribute:: execution_date
      

      

   .. py:attribute:: rendered_fields
      

      

   .. py:attribute:: k8s_pod_yaml
      

      

   .. py:method:: __repr__(self)

      Return repr(self).


   .. py:method:: get_templated_fields(cls, ti: airflow.models.taskinstance.TaskInstance, session: sqlalchemy.orm.Session = None) -> Optional[dict]
      :classmethod:

      Get templated field for a TaskInstance from the RenderedTaskInstanceFields
      table.

      :param ti: Task Instance
      :param session: SqlAlchemy Session
      :return: Rendered Templated TI field


   .. py:method:: get_k8s_pod_yaml(cls, ti: airflow.models.taskinstance.TaskInstance, session: sqlalchemy.orm.Session = None) -> Optional[dict]
      :classmethod:

      Get rendered Kubernetes Pod Yaml for a TaskInstance from the RenderedTaskInstanceFields
      table.

      :param ti: Task Instance
      :param session: SqlAlchemy Session
      :return: Kubernetes Pod Yaml


   .. py:method:: write(self, session: sqlalchemy.orm.Session = None)

      Write instance to database

      :param session: SqlAlchemy Session


   .. py:method:: delete_old_records(cls, task_id: str, dag_id: str, num_to_keep=conf.getint('core', 'max_num_rendered_ti_fields_per_task', fallback=0), session: sqlalchemy.orm.Session = None)
      :classmethod:

      Keep only Last X (num_to_keep) number of records for a task by deleting others

      :param task_id: Task ID
      :param dag_id: Dag ID
      :param num_to_keep: Number of Records to keep
      :param session: SqlAlchemy Session



